# p4pi

./: README.md
.obs/: workflows.yml
bmv2/: Makefile  README.md  basic_mirror.p4
dpdk/: README.md
image-specs/: Dockerfile  README.md  build-docker.sh  build.sh  config  depends
p4app/: README.md  p4app
p4pi-kernel/: README.md  config
p4pi-web/: .gitignore  README.md  gunicorn-cfg.py  manage.py  pyproject.toml  requirements.txt
p4pi-web/config/: asgi.py  settings.py  urls.py  wsgi.py
p4pi-web/dashboard/: forms.py  urls.py  utils.py  views.py
p4pi-web/dashboard/static/assets/css/: style.css
p4pi-web/dashboard/static/assets/css/codemirror/: codemirror.css  placeholder.css
p4pi-web/dashboard/static/assets/fonts/opensans/: opensans.css
p4pi-web/dashboard/static/assets/js/: main.js  pcoded.min.js
p4pi-web/dashboard/static/assets/js/codemirror/: closebrackets.js  codemirror-p4-mode.js  dialog.js  jump-to-line.js  matchbrackets.js  placeholder.js  search.js  searchcursor.js  simplescrollbars.js
p4pi-web/dashboard/static/assets/plugins/bootstrap/css/: bootstrap.min.css
p4pi-web/dashboard/templates/: access-point.html  auth-reset-pass.html  control-plane.html  index.html  p4-compiler.html  p4-switch-target.html
p4pi-web/dashboard/templates/accounts/: password_change.html  register.html
p4pi-web/dashboard/templates/includes/: navigation.html  scripts.html
p4pi-web/dashboard/templates/layouts/: base-fullscreen.html  base.html
p4pi-web/debian/: changelog  control  p4pi-web.install  rules
pi-gen/: config
t4p4s/: README.md  basic_mirror.p4  (+1 more)
(+127 files in other folders)
