[tool.poetry]
name = "p4pi-web"
version = "0.1.0"
description = "Web interface for p4pi"
authors = ["Dávid Kis <kidraai@inf.elte.hu>", "Radostin Stoyanov <radostin.stoyanov@eng.ox.ac.uk>"]
maintainers = ["Dávid Kis <kidraai@inf.elte.hu>", "Radostin Stoyanov <radostin.stoyanov@eng.ox.ac.uk>"]
repository="https://github.com/p4lang/p4pi"
license = "MIT"
packages = [
    { include = "dashboard" },
    { include = "config" },
]
include = [
  "requirements.txt",
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "~=3.2.5"
django-environ = "~=0.4.5"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"
wsproto = "^1.0.0"
channels = "^3.0.4"
python-decouple = "^3.4"
pycountry = "^20.7.3"
django-crispy-forms = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
